--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "server.js",
   "engines": {
-    "node": "v0.4.7"
+    "node": ">v0.4.7"
   },
   "dependencies": {
     "connect": ">=1.4.1",
